[package]
name = "dungeon-consul"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serenity = { version="0.11.5", default-features = false, features = ["client", 
    "gateway", "rustls_backend", "model", "cache"] }
serde = { version = "1.0.104", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
async-traits = "0.0.0"
serde_yaml = "0.9.21"
regex = "1.7.3"
lazy_static = "1.4.0"
